--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <meta name="description" content="這是一個在demox當機時會顯示的頁面">
     <title>DEMOX</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js" async></script>
     <div class="parent">
         <h1 class="ml3" style="margin-top: 150px; font-size: 3em;">抱歉，出現了一些小錯誤</h1>
     </div>
