--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
 <body>
     <div id="demo"></div>
     <img id="crygirl" class="cry" src="cry.png" alt="sad"  height="250px" width="179px"> <!--印出中間圖片-->
-    <img src="blue1." class="button" alt="blue" width="100%" height="width%4.12">
+    <img src="blue1.jpg" class="button" alt="blue" width="100%" height="width%4.12">
     <h2>或嘗試聯絡我們</h2>
     <h2><a href="mailto:service@demox.tw" class="email-link">service@demox.tw</a></h2>
 </body>
